# iroh-transfer

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: 2026-06-16-iroh-transfer-design.md
docs/plans/: 2026-06-16-iroh-transfer-plan.md
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: tauri.ts
frontend/src/router/: index.ts
frontend/src/stores/: history.ts
frontend/src/utils/: index.ts
frontend/src/views/: AboutView.vue  TransferView.vue
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
